# autonomous-driving-system

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  SPEC.md  fly.toml  pyproject.toml  trading_stack_stopped.txt
.claude/: launch.json
.github/workflows/: ci.yml
apps/autoware_eval/: .gitignore  EVAL.md  compare_routes.py  golden_route_check.py  open_rviz.ps1  prep_map.py  run_eval.ps1  run_viz.ps1
apps/autoware_eval/overrides/: lane_change.param.yaml
apps/webdemo/backend/: pyproject.toml
apps/webdemo/backend/src/webdemo_backend/: __init__.py  app.py  mapservice.py  schemas.py  simulator.py
apps/webdemo/backend/src/webdemo_backend/static/: index.html
apps/webdemo/backend/tests/: test_api.py  test_map_artifact.py  test_schemas.py  test_simulator.py
docs/: PROJECT_REPORT.md
docs/adr/: 0001-lanelet2-canonical-map-format.md  0002-shared-avcore-monorepo.md  0003-hosting-cloudflare-tunnel-first.md
infra/: README.md  docker-compose.yml
maps/: barcelona_eixample.osm  barcelona_eixample_projector_info.yaml
