[project]
name = "autonomous-driving"
version = "0.1.0"
description = "AV driving system: lane detection, Lanelet2 maps, route planning, Autoware eval, live web demo"
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/avcore", "apps/webdemo/backend"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
src = ["packages/avcore/src", "apps/webdemo/backend/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
files = [
    "packages/avcore/src/avcore",
    "apps/webdemo/backend/src/webdemo_backend",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/avcore/tests",
    "apps/webdemo/backend/tests",
]
addopts = "-q --cov=avcore --cov=webdemo_backend --cov-report=term-missing"

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
