[project]
name = "webdemo-backend"
version = "0.1.0"
description = "Live demo backend: REST + WebSocket contracts, session simulator (FastAPI from P5)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "avcore",
    "avmap-tools",
]

[tool.uv.sources]
avcore = { workspace = true }
avmap-tools = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webdemo_backend"]
